--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -8,78 +8,81 @@
           th:href="@{/css/style.css}"/>
 </head>
 <body>
-
-<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-sm-2" href="/user">
-        <span class="font-weight-bold" th:utext="${user.getUsername()}"></span>
-        <span class="font-weight-normal"> with roles: </span>
-        <span class="font-weight-normal" th:text="${user.getRoles()}"></span>
-    </a>
-    <ul class="navbar-nav px-3">
-        <li class="nav-item text-right">
-            <a class="nav-link" href="/logout">Logout</a>
-        </li>
-    </ul>
-</nav>
-</br>
-</br>
-
-<h1>User panel</h1>
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-2 p-0">
-            <div class="bg-white vh-100">
-                <nav class="nav nav-pills nav-fill nav flex-column mt-3">
-                    <a class="nav-link active text-start" aria-selected="true" th:href="@{/user}">User</a>
-                </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid  text-white">
+        <div class="collapse navbar-collapse">
+            <div>
+                <span class="nav-text text-navb probel" th:utext="(${user.getEmail()})+ ' '"></span>
+                <span class="nav-text probel">with roles:</span>
+                <span th:each=" role :${user.getAuthorities()}">
+                    <span class="nav-text probel" th:utext="' ' + (${role})"></span>
+                </span>
             </div>
         </div>
+        <a class="nav-link out" th:href="@{/logout}">Logout</a>
+    </div>
+</nav>
 
-        <div class="col-sm-10">
-            <div class="tab-content">
-                <div class="tab-pane fade show active" id="userUs">
-                    <div class="col-sm-12 p-3">
-                        <h2>User information-page</h2>
-                            <h4 class="card-title br-light">About user</h4>
-                    </div>
 
-                    <div class="tab-content table-responsive">
-                        <table class="table table-striped table-sm">
+<div class="d-flex align-items-start">
+    <div class="nav col-md-2 nav-pills flex-column" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+        <br>
+        <a class="nav-link active" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile"
+           type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">User
+        </a>
+
+    </div>
+    <div class="tab-content gg" id="v-pills-tabContent">
+
+        <div class="tab-pane fade redcontain html show active" id="v-pills-profile" role="tabpanel"
+             aria-labelledby="v-pills-profile-tab">
+
+            <div class="col px-5">
+                <br>
+                <h1>User information-page</h1>
+                <br>
+
+                <h3 class="card-header border">About user</h3>
+                <div class="card">
+                    <div class="card-body">
+                        <table class="table table-borderless table-striped">
                             <thead>
                             <tr>
-                                <th>id</th>
-                                <th>username</th>
-                                <th>name</th>
-                                <th>email</th>
-                                <th>password</th>
-                                <th>role</th>
+                                <th scope="col">ID</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Role</th>
                             </tr>
                             </thead>
-                            <tbody>
                             <tr>
-                                <td th:utext="${user.getId()}"></td>
-                                <td th:utext="${user.getUsername()}"></td>
-                                <td th:utext="${user.getName()}"></td>
-                                <td th:utext="${user.getEmail()}"></td>
-                                <td th:utext="${user.getPassword()}"></td>
-                                <td th:utext="${user.getRoles()}"></td>
+                                <td th:utext="${user.getId()}">Id</td>
+                                <td th:utext="${user.getUsername()}">FName</td>
+                                <td th:utext="${user.getEmail()}">Email</td>
+
+                                <td>
+                                    <span th:each="role :${user.getRoles()}">
+                                    <span th:utext="${role}">Roles </span>
+                                    </span>
+                                </td>
+
                             </tr>
-                            </tbody>
                         </table>
-                        <form th:action="@{/admin}" th:method="GET">
-                            <input type="submit" value="Список пользователей"/>
-                        </form>
                     </div>
                 </div>
             </div>
         </div>
+
+
     </div>
+
 </div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+
+
+<script type="text/javascript" src="../static/UserPage.js"></script>
 </body>
 </html>
